# trakt

./: .gitignore  Makefile  dune-project  flake.nix  rocq-trakt.opam
.github/workflows/: Dockerfile  build-master.yml  build.yml  format.yml  master.yml  matrix-build.yml  matrix-reverse.yml  matrix-template.yml  matrix.yml  opam.yml  reverse.yml  specific.yml
elpi/: commands.elpi  common.elpi  dune  proof.elpi
example/: Example.v  dune  dune-project
nix/: lib.nix
nix/example/: default.nix  mathcomp.nix  zify.nix
nix/overlay/: default.nix  trakt.nix  zify.nix
nix/pkgs/: default.nix  trakt.nix
nix/trakt/: default.nix  trakt.nix  zify.nix
test/: Unit.v  dune  dune-project
theories/: Commands.v  Database.v  Tactic.v  dune
